動くやつ組み込み途中

--- a/test.html
+++ b/test.html
@@ -12,12 +12,12 @@
 
 .css .sprite {
     /*一秒間に動くフレーム数*/
-    -webkit-animation: play1 1.5s steps(30) 0.0s infinite;
-    animation: play1 1.5s steps(30) 0.0s infinite;
+    -webkit-animation: play 1.0s steps(30) 0.0s infinite;
+    animation: play 1.5s steps(30) 0.0s infinite;
 }
 
 
-@-webkit-keyframes play1 {
+@-webkit-keyframes play {
     /*一秒間に動くスタイル*/
     0% {
         background-position: 0px 0;
@@ -30,7 +30,7 @@
     }
 }
 
-@keyframes play1 {
+@keyframes play {
   background-size: cover;
     /*一秒間に動くスタイル*/
     0% {
