--- a/public/test.html
+++ b/public/test.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>505</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8"/>
   <style>
     @import 'https://fonts.googleapis.com/css?family=Cinzel';
     /*背景画像の設定をする*/
     .bgImage {
-      background: url(/assets/img/thunderstorm.jpg) no-repeat center;
+      background: url(/assets/img/maintenance.jpg) no-repeat center;
       background-size: cover;
       position: relative;
       z-index: 0;
@@ -43,7 +44,7 @@
 
 <body>
   <div class="bgImage">
-    <p><span style="font-size:50px">404</span><br>Not Found</p>
+    <p>問題が発生してありません。<br>申し訳ありません。</p>
 </div>
 </body>
 </html>
