--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>505</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8"/>
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    @import 'https://fonts.googleapis.com/css?family=Cinzel';
+    /*背景画像の設定をする*/
+    .bgImage {
+      background: url(/assets/img/maintenance.jpg) no-repeat center;
+      background-size: cover;
+      position: relative;
+      z-index: 0;
+      overflow: hidden;/*ブラー効果でボヤけた部分を非表示*/
+    }
+    /*:beforeにぼかし効果を設定する*/
+    .bgImage:before {
+      content: '';
+      background: inherit;/*.bgImageで設定した背景画像を継承する*/
+      -webkit-filter: blur(5px);
+      -moz-filter: blur(5px);
+      -o-filter: blur(5px);
+      -ms-filter: blur(5px);
+      filter: blur(5px);
+      /* position: absolute; */
+      /*ブラー効果で画像の端がボヤけた分だけ位置を調整*/
+      top: -5px;
+      left: -5px;
+      right: -5px;
+      bottom: -5px;
+      z-index: -1;/*重なり順序を一番下にしておく*/
+    }
+    p {
+      margin: 400px 0 400px;
+      text-align: center;
+      font-family: 'Cinzel', serif;
+      font-size: 34px;
+      color: #fff;
+      text-shadow: 0 0 10px rgba(0,0,0,.4);
+    }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+<body>
+  <div class="bgImage">
+    <p>問題が発生しております。申し訳ありません。</p>
   </div>
 </body>
 </html>
